styling fix for component render

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -6,7 +6,7 @@
     <title>ui-tag</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="icon" type="image/png" href="/images/EmberJS@50.png">
     {{content-for "head"}}
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
